--- a/src/main/resources/templates/plantilla.html
+++ b/src/main/resources/templates/plantilla.html
@@ -13,5 +13,8 @@ layout:decorate="~{layout}"
     <div layout:fragment="contenido">
         
     </div>
+
+    <!-- Mis JS -->
+    <script th:fragment="js"></script>
 </body>
 </html>
