Implement product management features: add methods for retrieving, editing, and deleting products; update templates for product listing and forms; style adjustments for better UI/UX.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -129,6 +129,14 @@ body {
     transition: color 0.2s ease;
 }
 
+/* Tacha los productos desactivados en list-admin */
+.tachado {
+    text-decoration: line-through;
+    text-decoration-color: crimson;
+    color: antiquewhite;
+    filter: grayscale(1);
+}
+
 .sidebar ul li a:hover {
     color: #ff9900;
 }
