--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,11 +7,12 @@ layout:decorate="~{layout}"
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plantilla</title>
+    <title>SoySuper - Tu Supermercado Online</title>
 </head>
 <body>
     <div layout:fragment="contenido">
         <h1>Pagina principal</h1>
     </div>
+    <script th:fragment="js"></script>
 </body>
 </html>
