--- a/src/main/resources/templates/productos/productos-list-admin.html
+++ b/src/main/resources/templates/productos/productos-list-admin.html
@@ -5,7 +5,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plantilla</title>
 
 
 </head>
@@ -14,64 +13,63 @@
     <div layout:fragment="contenido">
 
         <h1 class="text-primary" align="center" th:text="${titulo}"></h1>
-
+        
+        <br>
         <div class="container mt-4">
             <table id="tabla-productos" class="table table-striped table-bordered" style="width:100%">
                 <thead>
                     <tr>
-                        <th>Name</th>
-                        <th>Position</th>
-                        <th>Office</th>
-                        <th>Age</th>
-                        <th>Start date</th>
-                        <th>Salary</th>
+                        <th>#</th>
+                        <th>Imágen</th>
+                        <th>Nombre</th>
+                        <th>Precio Minorista</th>
+                        <th>Precio Bulto</th>
+                        <th>Stock</th>
+                        <th>Categoria</th>
+                        <th>Fecha de Vencimiento</th>
+                        <th>Opciones</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>System Architect</td>
-                        <td>Edinburgh</td>
-                        <td>61</td>
-                        <td>2011-04-25</td>
-                        <td>$320,800</td>
-                    </tr>
-                    <tr>
-                        <td>Garrett Winters</td>
-                        <td>Accountant</td>
-                        <td>Tokyo</td>
-                        <td>63</td>
-                        <td>2011-07-25</td>
-                        <td>$170,750</td>
-                    </tr>
-                    <tr>
-                        <td>Ashton Cox</td>
-                        <td>Junior Technical Author</td>
-                        <td>San Francisco</td>
-                        <td>66</td>
-                        <td>2009-01-12</td>
-                        <td>$86,000</td>
-                    </tr>
-                    <tr>
-                        <td>Cedric Kelly</td>
-                        <td>Senior Javascript Developer</td>
-                        <td>Edinburgh</td>
-                        <td>22</td>
-                        <td>2012-03-29</td>
-                        <td>$433,060</td>
+                    <tr th:each="p : ${productos}" th:class="${not p.activo} ? 'tachado' : ''">
+                        <td th:text="${p.id}"></td>
+                        <td>
+                            <img th:src="@{${p.linkImagen}}" alt="Foto" height="100px">
+                        </td>
+                        <td th:text="${p.nombre}"></td>
+                        <td th:text="'$' + ${p.precioMin}"></td>
+                        <td th:text="'$' + ${p.precioBulto}"></td>
+                        <td th:text="${p.stock}"></td>
+                        <td th:text="${p.categoria.nombre}"></td>
+                        <td th:text="${#temporals.format(p.fechaVen, 'dd/MM/yyyy')}"></td>
+                        <td>
+                            <a th:href="@{/productos/editar/{id}(id=${p.id})}" class="btn btn-sm btn-warning">Editar</a>
+                            <a th:href="@{/productos/deshabilitar/{id}(id=${p.id})}" class="btn btn-sm btn-danger">
+                                <span th:text="${not p.activo} ? 'Habilitar' : 'Deshabilitar'"></span>
+                            </a>
+                            <a th:href="@{/productos/borrar/{id}(id=${p.id})}" class="btn btn-sm btn-danger">Borrar</a>
+
+                        </td>
                     </tr>
                 </tbody>
                 <tfoot>
                     <tr>
-                        <th>Name</th>
-                        <th>Position</th>
-                        <th>Office</th>
-                        <th>Age</th>
-                        <th>Start date</th>
-                        <th>Salary</th>
+                        <th>#</th>
+                        <th>Imágen</th>
+                        <th>Nombre</th>
+                        <th>Precio Minorista</th>
+                        <th>Precio Bulto</th>
+                        <th>Stock</th>
+                        <th>Categoria</th>
+                        <th>Fecha de Vencimiento</th>
+                        <th>Opciones</th>
                     </tr>
                 </tfoot>
             </table>
+            <!-- Botón debajo de la tabla -->
+            <div class="text-end mt-3">
+                <a th:href="@{/productos/nuevo}" class="btn btn-outline-primary">Nuevo Producto</a>
+            </div>
         </div>
 
     </div>
