--- a/src/main/resources/templates/productos/productos-form.html
+++ b/src/main/resources/templates/productos/productos-form.html
@@ -60,14 +60,14 @@
 
                 <div class="col-md-6">
                     <label class="form-label">Precio Minorista</label>
-                    <input type="number" step="0.01" class="form-control" name="precioMin" th:field="*{precioMin}"
+                    <input type="number" class="form-control" name="precioMin" th:field="*{precioMin}"
                         required>
                     <small class="form-label text-danger" th:errors="*{precioMin}"></small>
                 </div>
 
                 <div class="col-md-6">
                     <label class="form-label">Precio por Bulto</label>
-                    <input type="number" step="0.01" class="form-control" name="precioBulto" th:field="*{precioBulto}"
+                    <input type="number" class="form-control" name="precioBulto" th:field="*{precioBulto}"
                         required>
                     <small class="form-label text-danger" th:errors="*{precioBulto}"></small>
                 </div>
@@ -110,6 +110,9 @@
 
                 <div class="col-12">
                     <button type="submit" class="btn btn-success w-100">Guardar Producto</button>
+                </div>
+                <div class="col-12">
+                    <a th:href="@{/productos/listadoAdmin}" class="btn btn-danger w-100">Cancelar</a>
                 </div>
 
             </div>
