--- a/src/main/resources/templates/plantilla-dashboard.html
+++ b/src/main/resources/templates/plantilla-dashboard.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    layout:decorate="~{layout-dashboard}">
-
+<html lang="en"
+xmlns:th="https://www.thymeleaf.org"
+xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+layout:decorate="~{layout-dashboard}"
+>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:text="${titulo}"></title>
     <style>
-        .container {
+        .container{
             margin-left: 20px;
         }
     </style>
 </head>
-
 <body>
-    <div class="container" layout:fragment="dashboard">
+    <div layout:fragment="dashboard"> <!--Toda la información va adentro de este div, no afuera -->
         
     </div>
 
     <!-- Mis JS -->
     <script th:fragment="js"></script>
 </body>
-
 </html>
